--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Alpine F1</title>
     </head>
     <body>
         <header>
-            <h1>Alpine F1 2023 Season</h1>
+            <h1>Alpine Zone</h1>
         </header>
         <section class="banner">
             <img src="./img/Alpine car.jpg" alt="Alpine Formula 1 car">
