Added portfolio section and almost completed project. need to add Cites to info used

--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
             <ul>
                 <li><a href="results.html">Season Results</a></li>
                 <li><a href="drivers.html">Driver Info</a></li>
-                <li><a href="origin.html">Alpine F1 Journey</a></li>
                 <li><a href="about.html">About us</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
         <main>
             <article>
                 <h2>Upcoming races</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic id recusandae nostrum ab iusto eos quibusdam praesentium consequatur optio dignissimos harum illum, cupiditate asperiores labore, laborum cum amet? Laborum, id.</p>
+                <p>
+                    As the Formula One season reaches its crescendo, Alpine F1 Team is poised for the final race with a mix of anticipation and resolve. The season has been a rollercoaster, marked by unexpected podium finishes at Zandvoort and Monaco that belied the team's struggles for consistency. Alpine's performance has been punctuated by both brilliant driving and misfortunes, with Esteban Ocon setting an unwanted record for the most time penalties in a race, which underscores the team's challenges. With a solid driver lineup, Alpine aims to harness the talent of Pierre Gasly and Esteban Ocon to finish the season on a high note. The focus is not only on closing the gap with their rivals but also on building momentum for the next season. Leadership changes loom on the horizon, with rumors of a new team principal adding to the air of change and expectation. The upcoming race is more than a competition; it's a chance for Alpine to lay down a marker for the future.</p>
             </article>
         </main>
         <section class="join">
             <h2>Join for the latest news</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos ratione in dolorum molestias natus voluptatibus, magni dolor dicta excepturi quaerat nulla non aliquam eum enim. Doloremque in cum iste quisquam.</p>
+            <p>Subscribe to our newsletter for the latest updates, exclusive insights, and behind-the-scenes action from the world of Alpine F1. Join our community of racing enthusiasts and never miss a beat!</p>
             <form>
                 <input type="email" name="email" placeholder="Enter email" required>
             </form>
