--- a/results.html
+++ b/results.html
@@ -19,15 +19,16 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="drivers.html">Driver Info</a></li>
-                <li><a href="origin.html">Alpine F1 Journey</a></li>
                 <li><a href="about.html">About us</a></li> 
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
         <main>
             <article class="race_results">
                 <h2>2023 Race Results!</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae dolorem id ipsum suscipit beatae commodi dignissimos vitae maiores ipsam accusamus voluptate, enim autem magnam magni odit ut praesentium molestias nostrum.</p>
+                <img src="./img/2023 Results.PNG" alt="race results for each driver">
+                <p>Gasly has shown some consistency, finishing within the top 10 in several races, with a season's best 6th place finish, demonstrating his ability to compete in the midfield. Ocon, however, has had a more tumultuous season with multiple retirements (Ret) noted. Despite these setbacks, both drivers have managed to secure points for the team, contributing to Alpine's tally in the Constructors' Championship. The season has been challenging, but Alpine has showcased moments of potential with both drivers scoring points.</p>
             </article>
         </main>
         <section class="join">
