--- a/drivers.html
+++ b/drivers.html
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="drivers.html">Driver Info</a></li>
-                <li><a href="origin.html">Alpine F1 Journey</a></li>
                 <li><a href="about.html">About us</a></li> 
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
