--- a/drivers.html
+++ b/drivers.html
@@ -15,7 +15,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="drivers.html">Driver Info</a></li>
+                <li><a href="results.html">Season Results</a></li>
                 <li><a href="about.html">About us</a></li> 
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
