fixed footer info on about page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </main>
         <section class="join">
             <h2>Join for the latest news</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos ratione in dolorum molestias natus voluptatibus, magni dolor dicta excepturi quaerat nulla non aliquam eum enim. Doloremque in cum iste quisquam.</p>
+            <p>Subscribe to our newsletter for the latest updates, exclusive insights, and behind-the-scenes action from the world of Alpine F1. Join our community of racing enthusiasts and never miss a beat!</p>
             <form>
                 <input type="email" name="email" placeholder="Enter email" required>
             </form>
