--- a/drivers.html
+++ b/drivers.html
@@ -41,6 +41,7 @@
         </main>
         <section class="join">
             <h2>Join for the latest news</h2>
+            <p>Subscribe to our newsletter for the latest updates, exclusive insights, and behind-the-scenes action from the world of Alpine F1. Join our community of racing enthusiasts and never miss a beat!</p>
             <form>
                 <input type="email" name="email" placeholder="Enter email" required>
             </form>
