--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Alpine F1</title>
+        <title>STE</title>
     </head>
     <body>
         <header>
-            <h1>Alpine Zone</h1>
+            <h1>South Texas Environmental</h1>
         </header>
-        <section class="banner">
-            <img src="./img/Alpine car.jpg" alt="Alpine Formula 1 car">
-            <div>
-                <h2 class="welcome">Welcome to <br>Alpine F1!</h2>
-            </div>
-        </section>
         <nav class="main-nav">
             <ul>
-                <li><a href="results.html">Season Results</a></li>
-                <li><a href="drivers.html">Driver Info</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="tips.html">Dos and Don'ts</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="payments.html">Payments</a></li>
+                <li><a href="http://www.abracadabrasepticpumpinglp.com/">Pumpouts</a></li>
             </ul>
         </nav>
 
         <main>
             <article>
-                <h2>Upcoming races</h2>
+                <h2>Welcome!</h2>
                 <p>
-                    As the Formula One season reaches its crescendo, Alpine F1 Team is poised for the final race with a mix of anticipation and resolve. The season has been a rollercoaster, marked by unexpected podium finishes at Zandvoort and Monaco that belied the team's struggles for consistency. Alpine's performance has been punctuated by both brilliant driving and misfortunes, with Esteban Ocon setting an unwanted record for the most time penalties in a race, which underscores the team's challenges. With a solid driver lineup, Alpine aims to harness the talent of Pierre Gasly and Esteban Ocon to finish the season on a high note. The focus is not only on closing the gap with their rivals but also on building momentum for the next season. Leadership changes loom on the horizon, with rumors of a new team principal adding to the air of change and expectation. The upcoming race is more than a competition; it's a chance for Alpine to lay down a marker for the future.</p>
+                    Welcome to South Texas Environmental, your trusted source for complete septic system repair, maintenance, and parts services in Southern Texas. Whether you find yourself in need of a septic aerobic pump in Harris, require septic tank service in Montgomery, or need a compressor repair in Fort Bend, our dedicated team is here to assist you.
+                    <br>
+                    <br>
+                    At South Texas Environmental, our primary commitment is to keep your home and the environment safe. Since our establishment in 1991, we have evolved into the go-to aerobic systems service company for homeowners and contractors in Houston and its surrounding counties. Our reputation is built on a foundation of expertise and cost-effective service that has earned the trust of our community.
+                    <br>
+                    <br>
+                    Our team possesses hands-on experience with a wide range of major septic systems, ensuring that we can address all your repair, pumping, and new system installation needs. Additionally, we maintain a comprehensive inventory of parts and supplies, including pumps, aerators, compressors, sprinklers, and bacteria products.
+                    <br>
+                    <br>
+                    For added peace of mind, South Texas Environmental offers one and two-year service contracts designed to protect your investment. When you opt for a two-year agreement, you can also benefit from special discounts.
+                    <br>
+                    <br>
+                    We proudly extend our services to Houston and all surrounding counties, including Austin, Brazoria, Brazos, Cypress, Spring, Chambers, Colorado, Fort Bend, Tomball, Waller, Grimes, Harris, Liberty, Magnolia, Richmond, San Jacinto, Waller, Wharton, Montgomery, and Rosenberg. Your septic system needs are in capable hands with South Texas Environmental, where we prioritize your satisfaction and the well-being of our environment.
+                    </p>
             </article>
         </main>
         <section class="join">
-            <h2>Join for the latest news</h2>
-            <p>Subscribe to our newsletter for the latest updates, exclusive insights, and behind-the-scenes action from the world of Alpine F1. Join our community of racing enthusiasts and never miss a beat!</p>
+            <h2>Have concerns about your system?</h2>
+            <p>Fill out our contact form and we will reach out to you.</p>
             <form>
                 <input type="email" name="email" placeholder="Enter email" required>
             </form>
