--- a/payments.html
+++ b/payments.html
@@ -7,30 +7,35 @@
     </head>
     <body>
         <header>
-            <h1>About Us</h1>
+            <h1>South Texas Environmental</h1>
         </header>
         <section class="banner">
-            <img src="" alt="STE Truck">
+            <img src="" alt="">
         </section>
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tips.html">Dos and Don'ts</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="payments.html">Payments</a></li>
                 <li><a href="http://www.abracadabrasepticpumpinglp.com/">Pumpouts</a></li>
             </ul>
         </nav>
 
         <main>
-            <br>
-            <article>
-                <h2>About us</h2>
-                <p>Since 1991, South Texas Environmental has grown to become the aerobic systems service company Houston and surrounding county homeowners and contractors turn to for expert, cost-effective service.</p>
+            <article class="drivers">
+                <h2>Payments</h2>
                 <br>
-                <p>We offer hands-on experience with most major systems and can meet all your needs for repairs, pumping and new system installation. We also carry a full line of parts and supplies, including pumps, aerators, compressors, sprinklers and bacteria.</p>
                 <br>
-                <p>South Texas Environmental also offers the protection of one and two years service contracts, with discounts available on two-year agreements.</p>
+                <h1>Bill #</h1>
+                <img>
+                <p>Have a left over balance? Pay now! </p>
+                <br><br>
+                <h1>Submit payment</h1>
+                <br><br>
+                <h2>Joining together</h2>
+                <p>
+                    During the 2023 Formula One season, Pierre Gasly joined Esteban Ocon at Alpine, creating an all-French driver lineup that sparked much enthusiasm within the team and among fans. Gasly, transitioning from AlphaTauri, was eager to integrate into a team with deep French roots and was welcomed with open arms, heralded for his proven talent and alignment with Alpine's ambitious progress. Alpine's management expressed confidence in the synergistic potential of Gasly and Ocon, aiming to utilize their combined experience and motivation to propel the team towards its lofty objectives, emphasizing the symbolic significance of a French lineup driving the team forward.</p>
             </article>
         </main>
         <section class="join">
