--- a/services.html
+++ b/services.html
@@ -3,34 +3,38 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Alpine F1</title>
+        <title>South Texas Environmental</title>
     </head>
     <body>
         <header>
-            <h1>Alpine Zone</h1>
+            <h1>Our Services</h1>
+            <!-- <div class="header-left">
+                <h1>936-372-5682</h1>
+            </div>
+            <div class="header-right">
+                <h1>blah</h1>
+            </div> -->
         </header>
         <section class="banner">
-            <img src="./img/Pierre Etstabon.avif" alt="Pierre's Alpine car">
+            <img src="" alt="">
         </section>
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="results.html">Season Results</a></li>
-                <li><a href="about.html">About us</a></li> 
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="tips.html">Dos and Don'ts</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="payments.html">Payments</a></li>
+                <li><a href="http://www.abracadabrasepticpumpinglp.com/">Pumpouts</a></li>
             </ul>
         </nav>
 
         <main>
+            <br>
             <article class="drivers">
-                <h2>Our Drivers</h2>
-                <br>
-                <br>
-                <h1>Pierre Gasly</h1>
-                <img src="./img/Pierre podium.webp" alt="Pierre's first win">
+                <h2>Our Services</h2>
                 <p>French sensation Pierre Gasly, born on February 7, 1996, in Rouen, has made a name for himself in the Formula One world with his tenacity and skill. His journey from karting at the age of six to his triumphant win at the 2020 Italian Grand Prix is a testament to his dedication. Currently racing for Alpine, Gasly's career highlights include a GP2 Series Championship in 2016 and several podium finishes in F1, showcasing his consistent performance and competitive spirit.</p>
                 <br><br>
-                <h1>Estebon Ocon</h1>
+                <h2>Estebon Ocon</h2>
                 <img src="./img/EstyOcon.jpg" alt="Esty besty">
                 <p>Esteban Ocon, a prodigy of French motorsports, hails from Évreux, Normandy, born on September 17, 1996. Ocon's career is a chronicle of passion and perseverance, rising from selling his family home for his racing dreams to clinching his first F1 victory at the 2021 Hungarian Grand Prix. With a background of success in the FIA Formula 3 European Championship and the GP3 Series, Ocon now brings his formidable talent to Alpine, where his tenacious driving continues to earn him accolades.</p>
                 <br><br>
@@ -40,8 +44,8 @@
             </article>
         </main>
         <section class="join">
-            <h2>Join for the latest news</h2>
-            <p>Subscribe to our newsletter for the latest updates, exclusive insights, and behind-the-scenes action from the world of Alpine F1. Join our community of racing enthusiasts and never miss a beat!</p>
+            <h2>Have concerns about your system?</h2>
+            <p>Fill out our contact form and we will reach out to you.</p>
             <form>
                 <input type="email" name="email" placeholder="Enter email" required>
             </form>
